2009-11-10  John W. Eaton  <jwe@octave.org>

	* blas, lapack: Remove directories and all files.
	* Makefile.am: Don't include blas/module.mk or lapack/module.mk.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* Makefile.am, amos/module.mk, blas-xtra/module.mk,
	blas/module.mk, daspk/module.mk, dasrt/module.mk, dassl/module.mk,
	fftpack/module.mk, lapack-xtra/module.mk, lapack/module.mk,
	misc/module.mk, odepack/module.mk, ordered-qz/module.mk,
	quadpack/module.mk, ranlib/module.mk, slatec-err/module.mk,
	slatec-fn/module.mk, villad/module.mk: New files.

	* Makefile.in, Makerules.in, amos/Makefile.in,
	blas-xtra/Makefile.in, blas/Makefile.in, daspk/Makefile.in,
	dasrt/Makefile.in, dassl/Makefile.in, fftpack/Makefile.in,
	lapack-xtra/Makefile.in, lapack/Makefile.in, misc/Makefile.in,
	odepack/Makefile.in, ordered-qz/Makefile.in, quadpack/Makefile.in,
	ranlib/Makefile.in, slatec-err/Makefile.in, slatec-fn/Makefile.in,
	villad/Makefile.in: Delete.

2009-09-17  John W. Eaton  <jwe@octave.org>

	* misc/oct-dlldefs.h: Delete.
	* misc/Makefile.in (INCLUDES): Remove oct-dlldefs.h from the list.

2009-08-05  John W. Eaton  <jwe@octave.org>

	* Makefile.in (LINK_DEPS): Omit $(FFTW_LIBS) from the list.

2009-06-22  John W. Eaton  <jwe@octave.org>

	* Makefile.in (MISC_OBJ): Remove misc/machar.o and misc/smachar.o
	from the list.

	* misc/i1mach.f, misc/r1mach.f, misc/d1mach.f: Rewite in terms of
	LAPACK functions slamch and dlamch.
	* misc/machar.c: Delete.
	* misc/Makefile.in (CSRC): Remove machar.c from the list.
	(CEXTRA, XCC, XALL_CFLAGS): Delete variables.
	(machar.o, smachar.o, pic/machar.o, pic/smachar.o): Delete rules.

2009-05-07  Marco Atzeri  <marco_atzeri@yahoo.it>

        * Makefile.in: (SHLPRE): Rename from SHLLIBPRE.

2009-03-07  John W. Eaton  <jwe@octave.org>

	* misc/quit.h (octave_rethrow_exception):
	Don't tag with GCC_ATTR_NORETURN.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* Makefile.in (maintainer-clean): Also remove libraries.
